Add image below header with CSS style for the div class topmain

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,15 +54,17 @@ header a {
     font-size: inherit;
 }
 
-
-
-
-
-
-
 /* Specific rule for h1 inside header */
 header h1{
     font-weight: 900;
     font-style: italic;
 }
 
+.topmain {
+        background: url(../images/beefstew.jpg) no-repeat center;
+        background-size: cover;
+        width: 95%;
+        height: 400px;
+        margin: auto;
+        transition: transform .2s; /* Animation */
+}
