Rework on the CSS for all elements class, HTML better structure for CSS class, header with display: flex instead display inline-block

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,94 +6,59 @@
     font-family: "Lato", sans-serif;
 }
 
-/*Rule for header */
-
-
-.headericon {
-    display: inline-block;
-    
-    width: 70%;
-    height: 200px;
-    vertical-align:top;
-}
-.headericon h1, img {
-    display: inline-block;
-    vertical-align:middle;
-    max-width: 100%;
-    max-height: 100%;
+/* <header> */
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.headericon h1 {
-    margin-left: 20px;
+/* <div> */
+.header__logo {
+    display: flex;
 }
 
-.headernav {
-    display: inline-block;
-    /* outline: 3px solid red; */
-    width: 29%;
-    height: 200px;
-    vertical-align:top;
-}
-
-.headernav ul {
-    list-style: none;
-    text-align: right;
-}
-
-.headernav li {
-    display: inline-block;
-    /* outline: 3px solid black; */
-    margin: 20px 20px;
-    border-radius: 10%;
-    font-size: 20px;
-
-
-}
-
-header a {
+/* <a> */
+.header__link{
     text-decoration: none;
-    color: black;
-    font-size: inherit;
+    color: inherit;
+    display: flex;
+    align-items: center;
+
 }
 
-/* Specific rule for h1 inside header */
-header h1{
-    font-weight: 900;
-    font-style: italic;
+/* <img> */
+.header__image {
+
 }
 
-/* Rules for the top div after the header */
+/* <h1> */
+.header__title {
 
-@keyframes zoomImage {
-    0% {
-      background-size: 120%;
-    }
-    100% {
-      background-size: 100%;
-    }
-  }
-
-.topmain {  
-        background: url(../images/beefstew.jpg) no-repeat center;
-        background-size: cover;
-        width: 95%;
-        height: 400px;
-        margin: auto;
-        border-radius: 30px;
-        animation: zoomImage 2.6s ease-in-out forwards;
-        
 }
 
-#topmain-text {
-    position:relative;
-    bottom: -90%;
-    border-radius: 30px;
-    padding: 0px 10px;
-    background-color: rgba(0,0,0,0.7);
-    color:white;
-    text-align: center;
-    width: auto;
+/* <nav> */
+.header__menu {
+    display: flex;
+    align-items: center;
 }
+
+/* <ul> */
+.header__items {
+    list-style: none;
+}
+
+/* <li> */
+.header__item {
+    display: inline-block;
+
+}
+
+.header__item:hover {
+
+}
+
+/* </header> */
 
 
 /* Media queries */
@@ -108,13 +73,7 @@ header h1{
 }
 /* Rule for screens max 800px: */
 @media screen and (max-width: 800px) {
-    .headericon {
-        width: 70%;
-        height: 100px;
-        vertical-align:top;
-    }
-    .headericon h1, img {
-        max-width: 50%;
-        max-height: 90%;
+    .header {
+        flex-direction: column;
     }
 }
