--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,32 +100,66 @@
 
 /* <section> top-foods */
 .top-foods {
+    margin-top: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: #eeee;
+    border-radius: 20px;
+    padding: 10px;
+}
+.top-foods__title {
+    display: flex;
+    justify-content: center;
+}
+.top-foods__items {
     display: grid;
+    justify-content: center;
     grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
     grid-gap: 10px;
     align-items: center;
     padding: 0px;
 }
-.top-foods__items {
-    list-style: none; 
+.top-foods__item {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    list-style: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
     height: 200px;
-    background-color: green;
+    border-radius: 20px;
+    
+}
+.top-foods__subtitle {
+    position: absolute;
+    bottom: 3px;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    border-radius: 0px 0px 20px 20px;
+    text-align: center;
+    font-weight: bold;
+    font-size: large;
+}
+.top-foods__figure {
+    position: relative;
+    margin: auto;
+}
+.top-foods__photo {
+    object-fit: cover;
+    width: 100%;
+    height: 200px;
+    border-radius: 20px;
 }
 /* </section> top-foods */
+
 
 /* Media queries */
 /* Rule for screens max 1200px: */
 @media screen and (max-width: 1200px) {
-
-
 }
 /* Rule for screens max 950px: */
 @media screen and (max-width: 950px) {
-    .section__foods {
-        
-    }
-
-
 }
 /* Rule for screens max 800px: */
 @media screen and (max-width: 800px) {
