--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,8 +227,9 @@ body {
 
 /* <section class="recipes"> */
 .recipes {
-    display: block;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
 }
 .recipes__introduction {
@@ -240,52 +241,50 @@ body {
 }
 
 .recipes__recipe {
-    margin: 50px auto;
-    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1100px;
     background-color: #F2DEBA;
     border-radius: 20px;
-    text-align: center;
-    max-width: 1600px;
+    margin: 20px 0;
 }
 
 .recipes__title2 {
-    width: 100%;
+    text-align: center;
+}
+
+.recipes__container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    
 }
 
 .recipes__photo {
-    display: inline-block;
-    object-fit: cover;
-    width: 40%;
-    min-width: 400px;
-    max-width: 500px;
-    border-radius: 20px;
-    margin: 30px;
+    object-fit:cover;
+    width: 47%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    
+    margin: 0 1%;
+    border-radius: 20px;
 
 }
 
 .recipes__ingredients {
-    display: inline-block;
-    vertical-align: top;    
-    text-align: left;
+    width: 47%;
+    margin: 0 1%;
     background-color: #F0B669;
     border-radius: 20px;
-    padding: 10px;
-    margin: 30px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    max-width: 400px;
+
 
 }
 .recipes__instructions {
-    display: block;
-    text-align: left;
+    width: 100%;
     background-color: #F0B669;
-    max-width: 900px;
-    margin: 0 auto;
+    margin: 20px;
     border-radius: 20px;
-    padding: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 
