--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,6 +287,33 @@ body {
 
 }
 
+.contact {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.contact__container {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background-color: #F2DEBA;
+    border-radius: 20px;
+    padding: 10px;
+    width: 1100px;
+}
+.contact__submit {
+    padding: 10px;
+    border-radius: 5px;
+    margin: 0px 10px;
+    transition: box-shadow 0.6s;
+    background-color: #F0B669;
+    margin-bottom: 10px;
+    color: black;
+}
+.contact__submit:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-weight: bold;
+}
+
 
 /* </section> top-foods */
 
@@ -330,6 +357,15 @@ body {
     .recipes__instructions {
         width: 80%;
         padding: 10px;
+    }
+
+    .contact__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 90%;
+        text-align: center;
     }
     
 }
